All type of sortings updated

--- a/INDEX.html
+++ b/INDEX.html
@@ -28,10 +28,29 @@
                 <p class="nav-heading">Sorting visualizer</p>
 
                 <div class="algos">
+                    <button onclick="Bubble_sort()">Bubble sort</button>
+                    <button onclick="Selection_sort()">Selection  sort</button>
+                    <button onclick="Insertion_sort()">insertion sort</button>
+                    <button onclick="Merge_sort()">Merge sort</button>
+                    <button onclick="Quick_sort()">Quick sort</button>
                 </div>
             </div>
-
         </nav>
     </header>
+    <section>
+        <div id="array_container"> </div>
+    </section>
+
+    <footer>
+    </footer>
+
+    <script src="./scripts/main.js"></script>   <!--This should be at the end of body and should be loaded before sorts.js-->
+    <script src="./scripts/visualizations.js"></script>  <!--This should be loaded after main.js-->
+
+    <script src="./scripts/bubble_sort.js"></script>
+    <script src="./scripts/selection_sort.js"></script>
+    <script src="./scripts/insertion_sort.js"></script>
+    <script src="./scripts/merge_sort.js"></script>
+    <script src="./scripts/quick_sort.js"></script>
 </body>
 </html>
